Router updated, bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BDay: Fun Birthday card</title>
-    <base href="/bday/">
+    <base href="/">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -15,7 +15,7 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
           integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png" />
@@ -29,22 +29,6 @@
 
 </head>
 <body>
-
 <div id="app"></div>
-
-<footer class="footer">
-    <div class="container">
-        <div class="col-md-6">
-
-        </div>
-        <div class="col-md-6 text-right">
-            <ul class="list-inline">
-                <li><a href="">New card</a></li>
-                <li><a href="cards">My cards</a></li>
-                <li><a href="faq">faq</a></li>
-            </ul>
-        </div>
-    </div>
-</footer>
 </body>
 </html>
